--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Assignments</h1>
     <p>
-      <link href="assignment2.html">Assignment 2</a>.
+      <link rel="alternate" href="assignment2.html">Assignment 2</a>.
     </p>
   </body>
 </html>
