--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Assignments</h1>
     <p>
-      <a href="assignment2.html">Assignment 2</a>.
+      <a href="assignment2.html">Assignment 2</a>
     </p>
   </body>
 </html>
