--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Assignments</h1>
     <p>
       <a href="assignment2.html">Assignment 2</a>
+      <a href="fancifymytext.html">Assignment 4</a>
     </p>
   </body>
 </html>
