--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <p>
       <a href="fancifymytext.html">Assignment 5</a>
     </p>
+    <p>
+      <a href="starter/encrypt-it.html">Assignment 6</a>
+    </p>
   </body>
 </html>
