--- a/starter/encrypt-it.html
+++ b/starter/encrypt-it.html
@@ -3,6 +3,7 @@
   <head>
     <title>Encrypt-It!</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="encrypt-it.js"></script>
   </head>
   <body>
     <header>
