--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>My test page</title>
+    <title>Jacob Sullivan Portfolio</title>
   </head>
   <body>
-    <h1>Assignments</h1>
+    <h1>Portfolio</h1>
     <p>
       <a href="assignment2.html">Assignment 2</a>
     </p>
