--- a/index.html
+++ b/index.html
@@ -5,7 +5,33 @@
     <title>Jacob Sullivan Portfolio</title>
   </head>
   <body>
-    <h1>Portfolio</h1>
+    <p>
+      <h1>Portfolio</h1>
+    </p>
+    <p>
+      <h2>Change Counter</h2>
+    </p>
+    <p>
+      <h2>Pokedex</h2>
+    </p>
+    <p>
+      <h2>Star Wars Adventure Game</h2>
+    </p>
+    <p>
+      <h2>Wordle Aid</h2>
+    </p>
+    <p>
+      <h2>Single Screen Game Level</h2>
+    </p>
+    <p>
+      <h2>Room Escape</h2>
+    </p>
+    <p>
+      <h2>DolphinTour</h2>
+    </p>
+    <p>
+      <h2>Wizard Game</h2>
+    </p>
     <p>
       <a href="assignment2.html">Assignment 2</a>
     </p>
