--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>
       <h2>Change Counter</h2>
     </p>
+    <img src="Portfolio/change_counter_1.png"/>
     <p>
       <h2>Pokedex</h2>
     </p>
