--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <p>
       <h2>Change Counter</h2>
     </p>
+    <p>
+      This application is a change counter, written in Python,<br>
+      where you give the coin counts or weight and the application will calculate the total.<br>
+      It was created using Tkinter.
+    </p>
     <img src="Portfolio/change_counter_1.png"/>
     <p>
       <h2>Pokedex</h2>
