--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     <p>
       This application is a change counter, written in Python,<br>
-      where you give the coin counts or weight and the application will calculate the total.<br>
+      where you give the coin counts and the application will calculate the total.<br>
       It was created using Tkinter.
     </p>
     <img src="Portfolio/change_counter_1.png"/>
