--- a/index.html
+++ b/index.html
@@ -10,15 +10,40 @@
     </p>
     <p>
       <h2>Change Counter</h2>
-      <p>
-        This application is a change counter, written in Python,<br>
-        where you give the coin counts and the application will calculate the total.<br>
-        It was created using Tkinter.
-      </p>
-      <img src="Portfolio/change_counter_1.png"/>
     </p>
     <p>
+       This application is a change counter, written in Python,<br>
+       where you give the coin counts and the application will calculate the total.<br>
+       It was created using Tkinter.
+    </p>
+    <img src="Portfolio/change_counter_1.png"/>
+    <p>
       <h2>Pokedex</h2>
+    </p>
+    <p>
+      This application is a basic design of a Pokedex written in Python using Tkinter.<br>
+      You can search <strong>Pokedex</strong>, <strong>Type</strong>, and <strong>Abilities</strong>.<br>
+      <br>
+      <h3>Pokedex</h3> will allow you to search by <strong>Regions</strong>, <strong>Location</strong>,
+      <strong>Name</strong>, <strong>Description</strong>, <strong>Body Style</strong>, <strong>Egg Groups</strong>,
+      <strong>Moves</strong>, and <strong>Groups</strong>.<br>
+      <br>
+      <strong>Regions</strong> will allow you to search for Pokemon according to its region of origin.<br>
+      <br>
+      <strong>Location</strong> will allow you to search for Pokemon according to where they can be found in a particular region, i.e. route, road, city, town, forest, etc.<br>
+      <br>
+      <strong>Name</strong> will allow you to search for Pokemon by the <strong>first letter of their name</strong>, <strong>Mega</strong> evolutions, different <strong>Forms</strong> i.e, gender, regional, etc, region specific forms: <strong>Alolan</strong>, <strong>Galarian</strong>, and <strong>Hisuian</strong>, and <strong>Gigantamax</strong> forms.<br>
+      <br>
+      <strong>Description</strong> will allow you to search for Pokemon be species i.e., The Mouse Pokemon, by the first letter of the first word, then by the first word, and, if neccessary, the second word.<br>
+      <br>
+      <strong>Body Style</strong> will allow you to search for Pokemon based on their body style:<br>
+      <br>
+      <strong>Egg groups</strong> will allow you to search for Pokemon by breeding groups.<br>
+      <br>
+      <strong>Moves</strong> will allow you to search for moves by <strong>Type</strong>, <strong>Dynamax</strong> moves, <strong>G-Max</strong> moves, <strong>Z-Moves</strong>, or by their first letter.<br>
+      <br>
+      <strong>Groups</strong> will allow you to search for pokemon based on groupings such as <strong>Eeveelution</strong> which will show all of those involved in the evolution shain of Eevee or the Swords of Justice which will show all Pokemon involved with that group.<br>
+      <br>
     </p>
     <p>
       <h2>Star Wars Adventure Game</h2>
