--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
       <br>
       <strong>Groups</strong> will allow you to search for pokemon based on groupings such as <strong>Eeveelution</strong> which will show all of those involved in the evolution shain of Eevee or the Swords of Justice which will show all Pokemon involved with that group.<br>
       <br>
+      <h3>Type</h3> will allow you to search for Pokemon by a particular type and will also allow you to see type match-up charts for a particular type.<br>
+      Hovering over a value in the type chart will reveal the effectiveness of that type over another. For example, Fire is super effective against Grass/Ice.<br>
+      <br>
+      <h3>Abilities</h3> will allow you to search for abilities based on their first letter.<br>
+      <br>
     </p>
     <p>
       <h2>Star Wars Adventure Game</h2>
