--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <p>
       This application is a basic design of a Pokedex written in Python using Tkinter.<br>
       You can search <strong>Pokedex</strong>, <strong>Type</strong>, and <strong>Abilities</strong>.<br>
-      <br>
+      <img src="Portfolio/pokedex_home.png"/>
       <h3>Pokedex</h3> will allow you to search by <strong>Regions</strong>, <strong>Location</strong>,
       <strong>Name</strong>, <strong>Description</strong>, <strong>Body Style</strong>, <strong>Egg Groups</strong>,
       <strong>Moves</strong>, and <strong>Groups</strong>.<br>
