--- a/index.html
+++ b/index.html
@@ -27,28 +27,33 @@
       <h3>Pokedex</h3> will allow you to search by <strong>Regions</strong>, <strong>Location</strong>,
       <strong>Name</strong>, <strong>Description</strong>, <strong>Body Style</strong>, <strong>Egg Groups</strong>,
       <strong>Moves</strong>, and <strong>Groups</strong>.<br>
-      <br>
+      <img src="Portfolio/pokedex_pokedex.png"/>
       <strong>Regions</strong> will allow you to search for Pokemon according to its region of origin.<br>
-      <br>
+      <img src="Portfolio/pokedex_regions.png"/>
       <strong>Location</strong> will allow you to search for Pokemon according to where they can be found in a particular region, i.e. route, road, city, town, forest, etc.<br>
-      <br>
+      <img src="Portfolio/pokedex_location_1.png"/>
+      <img src="Portfolio/pokedex_location_2.png"/>
+      <img src="Portfolio/pokedex_location_3.png"/>
       <strong>Name</strong> will allow you to search for Pokemon by the <strong>first letter of their name</strong>, <strong>Mega</strong> evolutions, different <strong>Forms</strong> i.e, gender, regional, etc, region specific forms: <strong>Alolan</strong>, <strong>Galarian</strong>, and <strong>Hisuian</strong>, and <strong>Gigantamax</strong> forms.<br>
-      <br>
+      <img src="Portfolio/pokedex_name.png"/>
       <strong>Description</strong> will allow you to search for Pokemon be species i.e., The Mouse Pokemon, by the first letter of the first word, then by the first word, and, if neccessary, the second word.<br>
-      <br>
+      <img src="Portfolio/pokedex_description_1.png"/>
+      <img src="Portfolio/pokedex_description_2.png"/>
       <strong>Body Style</strong> will allow you to search for Pokemon based on their body style:<br>
-      <br>
+      <img src="Portfolio/pokedex_body_style.png"/>
       <strong>Egg groups</strong> will allow you to search for Pokemon by breeding groups.<br>
-      <br>
+      <img src="Portfolio/pokedex_egg_groups.png"/>
       <strong>Moves</strong> will allow you to search for moves by <strong>Type</strong>, <strong>Dynamax</strong> moves, <strong>G-Max</strong> moves, <strong>Z-Moves</strong>, or by their first letter.<br>
-      <br>
+      <img src="Portfolio/pokedex_moves_1.png"/>
       <strong>Groups</strong> will allow you to search for pokemon based on groupings such as <strong>Eeveelution</strong> which will show all of those involved in the evolution shain of Eevee or the Swords of Justice which will show all Pokemon involved with that group.<br>
-      <br>
+      <img src="Portfolio/pokedex_groups.png"/>
       <h3>Type</h3> will allow you to search for Pokemon by a particular type and will also allow you to see type match-up charts for a particular type.<br>
       Hovering over a value in the type chart will reveal the effectiveness of that type over another. For example, Fire is super effective against Grass/Ice.<br>
-      <br>
+      <img src="Portfolio/pokedex_type_1.png"/>
+      <img src="Portfolio/pokedex_type_2.png"/>
       <h3>Abilities</h3> will allow you to search for abilities based on their first letter.<br>
-      <br>
+      <img src="Portfolio/pokedex_abilities_1.png"/>
+      <img src="Portfolio/pokedex_abilities_2.png"/>
     </p>
     <p>
       <h2>Star Wars Adventure Game</h2>
