--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       <h2>Change Counter</h2>
     </p>
     <p>
-       This application is a change counter, written in Python,<br>
-       where you give the coin counts and the application will calculate the total.<br>
-       It was created using Tkinter.
+       This application is a change counter, written in Python using Tkinter, where you give the coin counts and the application will calculate the total.<br>
     </p>
     <img src="Portfolio/change_counter_1.png"/>
     <p>
