--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       <strong>Regions</strong> will allow you to search for Pokemon according to its region of origin.<br>
       <img src="Portfolio/pokedex_regions.png"/><br>
       <strong>Location</strong> will allow you to search for Pokemon according to where they can be found in a particular region, i.e. route, road, city, town, forest, etc.<br>
+      Within a particular location, you can search for pokemon based on time of day, season of the year, weather condition, or specific action such as fishing, surfing, flying, etc.<br>
+      Additionally, hovering over a Pokemon will reveal the games in which they can be found in that location.<br>
       <img src="Portfolio/pokedex_location_1.png"/>
       <img src="Portfolio/pokedex_location_2.png"/>
       <img src="Portfolio/pokedex_location_3.png"/><br>
