--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
       <h3>Abilities</h3> will allow you to search for abilities based on their first letter.<br>
       <img src="Portfolio/pokedex_abilities_1.png"/>
       <img src="Portfolio/pokedex_abilities_2.png"/><br>
+      <h3>Pokemon</h3> will show you the image, name, number, species, type, height, weight, body style, and evolution chain of the pokemon.<br>
+      Additionally, it will show the Pokedex entry for any game that the pokemon was in.<br>
+      Also included are buttons to switch between different forms of the pokemon i.e., gender, regional, mega evolutions, gigantamax, and shiny forms.<br>
+      <img src="Portfolio/pokedex_pokemon.png"/><br>
     </p>
     <p>
       <h2>Star Wars Adventure Game</h2>
