--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <p>
-      <h1>Portfolio</h1>
+      <h1>Jacob Sullivan's Portfolio</h1>
     </p>
     <p>
       <h2>Change Counter</h2>
