--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body>
     <p>
       <h1>Jacob Sullivan's Portfolio</h1>
+      email: jacobdsullivan813@gmail.com<br>
+      LinkedIn: <a href="https://www.linkedin.com/in/jacob-sullivan-582b1b277/">Jacob Sullivan's Profile</a>
     </p>
+    <hr>
     <p>
       <h2>Change Counter</h2>
     </p>
