--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
     <p>
       <h2>Wordle Aid</h2>
     </p>
+    <p>
+      This application was written in Python and is an aide to use when playing Wordle.<br>
+      This program reads in a list of all acceptable Wordle words and provides options for whittling the list down closer to the correct answer.<br>
+      Options include <strong>Eliminate</strong>, <strong>Possible</strong>, <strong>Duplicate</strong>, <strong>Eliminate Possible</strong>, <strong>Eliminate Duplicate</strong>, and <strong>Insert</strong>.<br>
+      <strong>Eliminate</strong> allows you to remove any letters you know are not in the word.<br>
+      <strong>Possible</strong> allows you to add any letters that you know are in the word but do not yet know the exact position.<br>
+      <strong>Duplicate</strong> allows you to insert any letter that you know has more than one appearance in the word.<br>
+      <strong>Eliminate Possible</strong> allows you to remove any letters you know are in the word from positions you know they do not go.<br>
+      <strong>Eliminate Duplicate</strong> allows you to clarify if you know that a known letter only appears once in the word.<br>
+      <strong>Insert</strong> allows you to confirm any letter into its known final position.<br>
+      Also included are the <strong>Generate</strong> and <strong>Reset</strong> options.<br>
+      <strong>Generate</strong> uses all of the currently collected information to filter the list of all words down to a list that meets the current specifications.<br>
+      <strong>Reset</strong> allows you to reset all specifications to a clean slate.<br>
+    </p>
     <hr>
     <p>
       <h2>Single Screen Game Level</h2>
