--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       This application was written in Python and is an aide to use when playing Wordle.<br>
       This program reads in a list of all acceptable Wordle words and provides options for whittling the list down closer to the correct answer.<br>
       Options include <strong>Eliminate</strong>, <strong>Possible</strong>, <strong>Duplicate</strong>, <strong>Eliminate Possible</strong>, <strong>Eliminate Duplicate</strong>, and <strong>Insert</strong>.<br>
+      <img src="Portfolio/wordle.png"/><br>
       <strong>Eliminate</strong> allows you to remove any letters you know are not in the word.<br>
       <strong>Possible</strong> allows you to add any letters that you know are in the word but do not yet know the exact position.<br>
       <strong>Duplicate</strong> allows you to insert any letter that you know has more than one appearance in the word.<br>
