--- a/index.html
+++ b/index.html
@@ -67,6 +67,16 @@
     <p>
       <h2>Star Wars Adventure Game</h2>
     </p>
+    <p>
+      This is a quick choose-your-own-adventure game based off of Star Wars written in Python using Tkinter, turtle, and pyGame.<br>
+      A Tkinter window is used for the primary controls with buttons, labels, and images.<br>
+      <br>
+      A Python turtle window is used for the live mapping showing every possible choice that can be made and has a path that goes along the choice that is made as the program is running.<br>
+      <br>
+      A pyGame window is used for the three mini-games.<br>
+      <br>
+      PyGame.mixer is also used for all the sound effects.<br>
+    </p>
     <hr>
     <p>
       <h2>Wordle Aid</h2>
