--- a/index.html
+++ b/index.html
@@ -70,11 +70,18 @@
     <p>
       This is a quick choose-your-own-adventure game based off of Star Wars written in Python using Tkinter, turtle, and pyGame.<br>
       A Tkinter window is used for the primary controls with buttons, labels, and images.<br>
-      <br>
+      <img src="Portfolio/star_wars_primary.png"/><br>
       A Python turtle window is used for the live mapping showing every possible choice that can be made and has a path that goes along the choice that is made as the program is running.<br>
-      <br>
+      <img src="Portfolio/star_wars_map_1.png"/>
+      <img src="Portfolio/star_wars_map_2.png"/><br>
       A pyGame window is used for the three mini-games.<br>
-      <br>
+      <img src="Portfolio/star_wars_ball_1.png"/>
+      <img src="Portfolio/star_wars_ball_2.png"/><br>
+      <img src="Portfolio/star_wars_pod_1.png"/>
+      <img src="Portfolio/star_wars_pod_2.png"/><br>
+      <img src="Portfolio/star_wars_coin_1.png"/>
+      <img src="Portfolio/star_wars_coin_2.png"/>
+      <img src="Portfolio/star_wars_coin_3.png"/><br>
       PyGame.mixer is also used for all the sound effects.<br>
     </p>
     <hr>
