--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
       A Tkinter window is used for the primary controls with buttons, labels, and images.<br>
       <img src="Portfolio/star_wars_primary.png"/><br>
       A Python turtle window is used for the live mapping showing every possible choice that can be made and has a path that goes along the choice that is made as the program is running.<br>
-      <img src="Portfolio/star_wars_map_1.png"/>
-      <img src="Portfolio/star_wars_map_2.png"/><br>
+      <img src="Portfolio/star_wars_map_1.png" height=500 />
+      <img src="Portfolio/star_wars_map_2.png" height=500 /><br>
       A pyGame window is used for the three mini-games.<br>
-      <img src="Portfolio/star_wars_ball_1.png"/>
-      <img src="Portfolio/star_wars_ball_2.png"/><br>
-      <img src="Portfolio/star_wars_pod_1.png"/>
-      <img src="Portfolio/star_wars_pod_2.png"/><br>
-      <img src="Portfolio/star_wars_coin_1.png"/>
-      <img src="Portfolio/star_wars_coin_2.png"/>
-      <img src="Portfolio/star_wars_coin_3.png"/><br>
+      <img src="Portfolio/star_wars_ball_1.png" height=500 />
+      <img src="Portfolio/star_wars_ball_2.png" hright=500 /><br>
+      <img src="Portfolio/star_wars_pod_1.png" height=500 />
+      <img src="Portfolio/star_wars_pod_2.png" height=500 /><br>
+      <img src="Portfolio/star_wars_coin_1.png" height=500 />
+      <img src="Portfolio/star_wars_coin_2.png" height=500 />
+      <img src="Portfolio/star_wars_coin_3.png" height=500 /><br>
       PyGame.mixer is also used for all the sound effects.<br>
     </p>
     <hr>
