--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <p>
       This is a quick choose-your-own-adventure game based off of Star Wars written in Python using Tkinter, turtle, and pyGame.<br>
       A Tkinter window is used for the primary controls with buttons, labels, and images.<br>
-      <img src="Portfolio/star_wars_primary.png" height="300"/><br>
+      <img src="Portfolio/star_wars_primary.png"/><br>
       A Python turtle window is used for the live mapping showing every possible choice that can be made and has a path that goes along the choice that is made as the program is running.<br>
       <img src="Portfolio/star_wars_map_1.png" height="300"/>
       <img src="Portfolio/star_wars_map_2.png" height="300"/><br>
