--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Jacob Sullivan Portfolio</title>
   </head>
   <body>
+    <h1>Jacob Sullivan's Portfolio</h1>
     <p>
       <h2>Change Counter</h2>
     </p>
