--- a/index.html
+++ b/index.html
@@ -114,6 +114,10 @@
     <p>
       <h2>Wizard Game</h2>
     </p>
+    <hr>
+    <p>
+      <h2>3D Models</h2>
+    </p>
     <p>
       <a href="assignment2.html">Assignment 2</a>
     </p>
