--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
     <p>
       <h2>Single Screen Game Level</h2>
     </p>
+    <p>
+      This a 2-dimensional single screen game level written in Java using object oriented programming.<br>
+      It uses keyboard commands <strong>a</strong>, <strong>s</strong>, <strong>d</strong>, <strong>w</strong>, and <strong>space</strong>.
+    </p>
     <hr>
     <p>
       <h2>Room Escape</h2>
