--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
       This a 2-dimensional single screen game level written in Java using object oriented programming.<br>
       It uses keyboard commands <strong>a</strong>, <strong>s</strong>, <strong>d</strong>, <strong>w</strong>, and <strong>space</strong>.
     </p>
+    <video width="320" height="240" controls>
+      <source src="Portfolio/videos/single_screen.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
     <hr>
     <p>
       <h2>Room Escape</h2>
