--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       This a 2-dimensional single screen game level written in Java using object oriented programming.<br>
       It uses keyboard commands <strong>a</strong>, <strong>s</strong>, <strong>d</strong>, <strong>w</strong>, and <strong>space</strong>.
     </p>
-    <video width="320" height="240" controls>
+    <video width="500" controls>
       <source src="Portfolio/Videos/single_screen.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
