--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <hr>
     <p>
       <h2>3D Models</h2>
+      Every model and scene was created using Maya.
     </p>
     <p>
       <a href="assignment2.html">Assignment 2</a>
