--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     </p>
     <p>
       This is an escape room game that takes place in an undersea facility written in Java using object oriented programming.<br>
-      It uses mouse controls.
+      It uses <strong>mouse controls</strong> and incorporates <strong>particle systems</strong> and <strong>background music</strong>.<br>
+      All art and music was created myself using additional applications.
     </p>
     <hr>
     <p>
