--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <h2>DolphinTour</h2>
     </p>
     <p>
-      This is a school assignment using a school provided game engine that allows the user to travel around the environment visiting various locations.<br>
+      This is a school assignment using a school provided game engine written in Java using object oriented programming that allows the user to travel around the environment visiting various locations.<br>
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
     </p>
     <hr>
@@ -132,7 +132,7 @@
       <h2>Wizard Game</h2>
     </p>
     <p>
-      This was a partnered school assignment using a school provided game engine.<br>
+      This was a partnered school assignment using a school provided game engine written in Java using object oriented programming.<br>
       This is a sword & sorcery themed, 3rd person, 3D action RPG. The setting is a green hillside where you play as one of two wizards that engage in combat with goblins using fireballs.<br>
       It allows <strong>local networked multiplayer</strong> and incorporates <strong>3D sound</strong> and <strong>physics</strong>.
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
