--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
       It uses <strong>mouse controls</strong> and incorporates <strong>particle systems</strong> and <strong>background music</strong>.<br>
       All art and music was created myself using additional applications.
     </p>
+    <video width="800" controls>
+      <source src="Portfolio/Videos/undersea_adventure.mp4" type="video/mp4">
+      Your browser does not support this video tag.
+    </video>
     <hr>
     <p>
       <h2>DolphinTour</h2>
