--- a/index.html
+++ b/index.html
@@ -146,5 +146,16 @@
       <h2>3D Models</h2>
       Every model and scene was created using Maya.
     </p>
+    <p>
+      <h3>Sculpture Space</h3>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_1.jpg"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_2.jpg"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_3.jpg"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_4.jpg"/><br>
+      <video width="80" controls>
+        <source src="Portfolio/Maya/Videos/sculpture_space.mp4" type="video/mp4">
+        Your browser does not support this video tag.
+      </video>
+    </p>
   </body>
 </html>
