--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
     </p>
     <p>
       <h3>Sculpture Space</h3>
-      <img src="Portfolio/Maya/Pictures/sculpture_space_1.jpg"/>
-      <img src="Portfolio/Maya/Pictures/sculpture_space_2.jpg"/>
-      <img src="Portfolio/Maya/Pictures/sculpture_space_3.jpg"/>
-      <img src="Portfolio/Maya/Pictures/sculpture_space_4.jpg"/><br>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_1.jpg" height="300"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_2.jpg" height="300"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_3.jpg" height="300"/>
+      <img src="Portfolio/Maya/Pictures/sculpture_space_4.jpg" height="300"/><br>
       <video width="800" controls>
         <source src="Portfolio/Maya/Videos/sculpture_space.mp4" type="video/mp4">
         Your browser does not support this video tag.
