--- a/index.html
+++ b/index.html
@@ -157,5 +157,16 @@
         Your browser does not support this video tag.
       </video>
     </p>
+    <p>
+      <h3>Still Life</h3>
+      <h4>Real</h4>
+      <img src="Portfolio/Maya/Pictures/still_life_0.png"/>
+      <h4>Modeled</h4>
+      <img src="Portfolio/Maya/Pictures/still_life_1.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_2.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_3.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_4.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_5.jpg"/>
+    </p>
   </body>
 </html>
