--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <p>
       <h3>Still Life</h3>
       <h4>Real</h4>
-      <img src="Portfolio/Maya/Pictures/still_life_0.png"/>
+      <img src="Portfolio/Maya/Pictures/still_life_0.png" width="1080"/>
       <h4>Modeled</h4>
       <img src="Portfolio/Maya/Pictures/still_life_1.jpg"/>
       <img src="Portfolio/Maya/Pictures/still_life_2.jpg"/>
