--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
       <h4>Real</h4>
       <img src="Portfolio/Maya/Pictures/still_life_0.png" width="1080"/>
       <h4>Modeled</h4>
-      <img src="Portfolio/Maya/Pictures/still_life_1.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_2.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_3.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_4.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_5.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_1.jpg" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_2.jpg" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_3.jpg" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_4.jpg" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_5.jpg" width="1080"/>
     </p>
   </body>
 </html>
