--- a/index.html
+++ b/index.html
@@ -168,5 +168,16 @@
       <img src="Portfolio/Maya/Pictures/still_life_4.jpg" width="1080"/>
       <img src="Portfolio/Maya/Pictures/still_life_5.jpg" width="1080"/>
     </p>
+    <p>
+      <h3>Surreal Environment</h3>
+      <img src="Portfolio/Maya/Pictures/surreal_1.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_2.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_3.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_4.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_5.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_6.jpg"/>
+      <img src="Portfolio/Maya/Pictures/surreal_7.jpg"/>
+      <img src="Portfolio/Maya/Pictures/surreal_8.jpg"/>
+    </p>
   </body>
 </html>
