--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
     </p>
     <p>
       <h3>Surreal Environment</h3>
-      <img src="Portfolio/Maya/Pictures/surreal_1.png"/>
-      <img src="Portfolio/Maya/Pictures/surreal_2.png"/>
-      <img src="Portfolio/Maya/Pictures/surreal_3.png"/>
-      <img src="Portfolio/Maya/Pictures/surreal_4.png"/>
-      <img src="Portfolio/Maya/Pictures/surreal_5.png"/>
+      <img src="Portfolio/Maya/Pictures/surreal_1.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/surreal_2.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/surreal_3.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/surreal_4.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/surreal_5.png" width="1080"/>
       <img src="Portfolio/Maya/Pictures/surreal_6.jpg"/>
       <img src="Portfolio/Maya/Pictures/surreal_7.jpg"/>
       <img src="Portfolio/Maya/Pictures/surreal_8.jpg"/>
