--- a/index.html
+++ b/index.html
@@ -160,21 +160,21 @@
     <p>
       <h3>Still Life</h3>
       <h4>Real</h4>
-      <img src="Portfolio/Maya/Pictures/still_life_0.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_0.png" width="920"/>
       <h4>Modeled</h4>
-      <img src="Portfolio/Maya/Pictures/still_life_1.jpg" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/still_life_2.jpg" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/still_life_3.jpg" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/still_life_4.jpg" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/still_life_5.jpg" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/still_life_1.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_2.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_3.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_4.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_5.jpg"/>
     </p>
     <p>
       <h3>Surreal Environment</h3>
-      <img src="Portfolio/Maya/Pictures/surreal_1.png" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/surreal_2.png" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/surreal_3.png" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/surreal_4.png" width="1080"/>
-      <img src="Portfolio/Maya/Pictures/surreal_5.png" width="1080"/>
+      <img src="Portfolio/Maya/Pictures/surreal_1.png" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_2.png" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_3.png" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_4.png" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_5.png" width="920"/>
       <img src="Portfolio/Maya/Pictures/surreal_6.jpg"/>
       <img src="Portfolio/Maya/Pictures/surreal_7.jpg"/>
       <img src="Portfolio/Maya/Pictures/surreal_8.jpg"/>
