--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
       <h4>Real</h4>
       <img src="Portfolio/Maya/Pictures/still_life_0.png" width="920"/>
       <h4>Modeled</h4>
-      <img src="Portfolio/Maya/Pictures/still_life_1.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_2.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_3.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_4.jpg"/>
-      <img src="Portfolio/Maya/Pictures/still_life_5.jpg"/>
+      <img src="Portfolio/Maya/Pictures/still_life_1.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/still_life_2.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/still_life_3.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/still_life_4.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/still_life_5.jpg" width="920"/>
     </p>
     <p>
       <h3>Surreal Environment</h3>
@@ -175,9 +175,9 @@
       <img src="Portfolio/Maya/Pictures/surreal_3.png" width="920"/>
       <img src="Portfolio/Maya/Pictures/surreal_4.png" width="920"/>
       <img src="Portfolio/Maya/Pictures/surreal_5.png" width="920"/>
-      <img src="Portfolio/Maya/Pictures/surreal_6.jpg"/>
-      <img src="Portfolio/Maya/Pictures/surreal_7.jpg"/>
-      <img src="Portfolio/Maya/Pictures/surreal_8.jpg"/>
+      <img src="Portfolio/Maya/Pictures/surreal_6.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_7.jpg" width="920"/>
+      <img src="Portfolio/Maya/Pictures/surreal_8.jpg" width="920"/>
     </p>
   </body>
 </html>
