--- a/index.html
+++ b/index.html
@@ -179,5 +179,26 @@
       <img src="Portfolio/Maya/Pictures/surreal_7.jpg" width="920"/>
       <img src="Portfolio/Maya/Pictures/surreal_8.jpg" width="920"/>
     </p>
+    <p>
+      <h3>Autonomous Baseball</h3>
+      <video width="800" controls>
+        <source src="Portfolio/Maya/Videos/machine.mp4" type="video/mp4">
+        Your browser does not support this video tag.
+      </video>
+    </p>
+    <p>
+      <h3>Momo the Monkey</h3>
+      <video width="800" controls>
+        <source src="Portfolio/Maya/Videos/momo.mp4" type="video/mp4">
+        Your browser does not support this video tag.
+      </video>
+    </p>
+    <p>
+      <h3>Enchanting Wizard</h3>
+      <video width="800" controls>
+        <source src="Portfolio/Maya/Videos/wizard.mp4" type="video/mp4">
+        Your browser does not support this video tag.
+      </video>
+    </p>
   </body>
 </html>
