--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
       This is a school assignment using a school provided game engine written in Java using object oriented programming that allows the user to travel around the environment visiting various locations.<br>
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
     </p>
+    <video width="800" controls>
+      <source src="Portfolio/Videos/dolphin_tour.mp4" type="video/mp4">
+      Your browser does not support this video tag.
+    </video>
     <hr>
     <p>
       <h2>Wizard Game</h2>
