--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
       It allows <strong>local networked multiplayer</strong> and incorporates <strong>3D sound</strong> and <strong>physics</strong>.
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
     </p>
+    <video width="800" controls>
+      <source src="Portfolio/Videos/wizards.mp4" type="video/mp4">
+      Your browser does not support this video tag.
+    </video>
     <hr>
     <p>
       <h2>3D Models</h2>
