--- a/index.html
+++ b/index.html
@@ -125,10 +125,36 @@
     </video>
     <hr>
     <p>
+      <h2>Space Environment 1</h2>
+    </p>
+    <p>
+      This is a space environment program written in Java using glsl shader programming and 3D matrices.<br>
+      This program has keyboard camera controls.<br>
+      It also utilizes a blend of global ambient light, a positional light, and a spot light, and includes a cube map and imported and manual models.<br>
+    </p>
+    <video width="800" controls>
+      <source src="Portfolio/Videos/space1.mp4" type="video/mp4">
+      Your browser does not supprt this video tag.
+    </video>
+    <hr>
+    <p>
+      <h2>Space Environment 2</h2>
+    </p>
+    <p>
+      This is a space environment program written in Java using glsl shader programming and 3D matrices.<br>
+      This program has keyboard camera controls.<br>
+      It also utilizes a blend of texture mapping with environment mapping, fog and transparency/blending, red/cyan stereoscopy, a cube map and imported and manual models, and includes simulated water, a spot light, and object shadow mapping.<br>
+    </p>
+    <video width="800" controls>
+      <source src="Portfolio/Videos/space2.mp4" type="video/mp4">
+      Your browser does not supprt this video tag.
+    </video>
+    <hr>
+    <p>
       <h2>DolphinTour</h2>
     </p>
     <p>
-      This is a school assignment using a school provided game engine written in Java using object oriented programming that allows the user to travel around the environment visiting various locations.<br>
+      This is a school assignment using a school provided game engine written in Java using object oriented programming and 3D matrices that allows the user to travel around the environment visiting various locations.<br>
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
     </p>
     <video width="800" controls>
@@ -140,7 +166,7 @@
       <h2>Wizard Game</h2>
     </p>
     <p>
-      This was a partnered school assignment using a school provided game engine written in Java using object oriented programming.<br>
+      This was a partnered school assignment using a school provided game engine written in Java using object oriented programming and 3D matrices.<br>
       This is a sword & sorcery themed, 3rd person, 3D action RPG. The setting is a green hillside where you play as one of two wizards that engage in combat with goblins using fireballs.<br>
       It allows <strong>local networked multiplayer</strong> and incorporates <strong>3D sound</strong> and <strong>physics</strong>.
       It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
