--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Jacob Sullivan Portfolio</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>Jacob Sullivan's Portfolio</h1>
