--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   </head>
   <body>
     <h1>Jacob Sullivan's Portfolio</h1>
-    <p>
-      <h2>Change Counter</h2>
-    </p>
-    <p>
-       This application is a change counter, written in Python using Tkinter, where you give the coin counts and the application will calculate the total.<br>
-      <img src="Portfolio/Pictures/change_counter_1.png"/>
-    </p>
+    <group>
+      <p>
+        <h2>Change Counter</h2>
+      </p>
+      <p>
+        This application is a change counter, written in Python using Tkinter, where you give the coin counts and the application will calculate the total.<br>
+        <img src="Portfolio/Pictures/change_counter_1.png"/>
+      </p>
+    </group>
     <hr>
     <p>
       <h2>Pokedex</h2>
