--- a/index.html
+++ b/index.html
@@ -237,5 +237,8 @@
         Your browser does not support this video tag.
       </video>
     </p>
+    <p>
+      <a href="starter/encrypt-it.html">Assignment 6</a>
+    </p>
   </body>
 </html>
