--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <legend>Single Screen Game Level</legend>
 
       This a 2-dimensional single screen game level written in Java using object oriented programming.<br>
-      It uses keyboard commands <strong>a</strong>, <strong>s</strong>, <strong>d</strong>, <strong>w</strong>, and <strong>space</strong>.
+      It uses keyboard commands <strong>a</strong>, <strong>s</strong>, <strong>d</strong>, <strong>w</strong>, and <strong>space</strong>.<br>
       <video width="800" controls>
         <source src="Portfolio/Videos/single_screen.mp4" type="video/mp4">
         Your browser does not support the video tag.
@@ -115,7 +115,7 @@
 
       This is an escape room game that takes place in an undersea facility written in Java using object oriented programming.<br>
       It uses <strong>mouse controls</strong> and incorporates <strong>particle systems</strong> and <strong>background music</strong>.<br>
-      All art and music was created myself using additional applications.
+      All art and music was created myself using additional applications.<br>
       <video width="800" controls>
         <source src="Portfolio/Videos/undersea_adventure.mp4" type="video/mp4">
         Your browser does not support this video tag.
@@ -150,7 +150,7 @@
       <legend>DolphinTour</legend>
 
       This is a school assignment using a school provided game engine written in Java using object oriented programming and 3D matrices that allows the user to travel around the environment visiting various locations.<br>
-      It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
+      It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.<br>
       <video width="800" controls>
         <source src="Portfolio/Videos/dolphin_tour.mp4" type="video/mp4">
         Your browser does not support this video tag.
@@ -163,7 +163,7 @@
       This was a partnered school assignment using a school provided game engine written in Java using object oriented programming and 3D matrices.<br>
       This is a sword & sorcery themed, 3rd person, 3D action RPG. The setting is a green hillside where you play as one of two wizards that engage in combat with goblins using fireballs.<br>
       It allows <strong>local networked multiplayer</strong> and incorporates <strong>3D sound</strong> and <strong>physics</strong>.
-      It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.
+      It allows <strong>keyboard controls</strong> and <strong>gamepad controls</strong>.<br>
       <video width="800" controls>
         <source src="Portfolio/Videos/wizards.mp4" type="video/mp4">
         Your browser does not support this video tag.
