--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </fieldset>
 
     <fieldset>
-      <label>3D Models</label>
+      <legend>3D Models</legend>
       Every model and scene was created using Maya.
 
       <h2>Sculpture Space</h2>
