--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <title>Jacob Sullivan Portfolio</title>
+    <fieldset><title>Jacob Sullivan Portfolio</title></fieldset>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
