--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Jacob Sullivan's Portfolio</h1>
     <fieldset>
+      <legend><img src="Portfolio/Pictures/python.png"/></legend>
+
       <fieldset>
         <legend>Change Counter</legend>
 
@@ -62,6 +64,7 @@
         Also included are buttons to switch between different forms of the pokemon i.e., gender, regional, mega evolutions, gigantamax, and shiny forms.<br>
         <img src="Portfolio/Pictures/pokedex_pokemon.png" height="500"/><br>
       </fieldset>
+
       <fieldset>
         <legend>Star Wars Adventure Game</legend>
 
@@ -102,6 +105,8 @@
     </fieldset>
 
     <fieldset>
+      <legend><img src="Portfolio/Pictures/java.png"/></legend>
+
       <fieldset>
         <legend>Single Screen Game Level</legend>
 
