--- a/index.html
+++ b/index.html
@@ -180,6 +180,8 @@
     </fieldset>
 
     <fieldset>
+      <legend><img src="Portfolio/Pictures/maya.png"/></legend>
+
       <fieldset>
         <legend>3D Models</legend>
         Every model and scene was created using Maya.
